# Ant-colony-algorithm

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  run.sh
.github/workflows/: cmake.yml
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libcolony/: CMakeLists.txt
src/libcolony/libcolony/: ant.cpp  ant.hpp  ant.test.cpp
